--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -150,12 +150,9 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/ningbo-title.png" alt="" style="width:410px;"></div>
-                        <h3>Photography by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
-                         Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
-                         Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
-                         Model: <a href="https://www.instagram.com/belledemo/" target="_blank">Sonia</a></br />
-                         Wardrobe: <a href="https://heidimerrick.com/" target="_blank">Heidi Merrick</a></br />
-                         Cameo: <a href="http://scoutsixteen.com/" target="_blank">Justin Livingston</a></h3>
+                        <h3>Photography by: <a href="https://thayergowdy.com " target="_blank">Thayer Gowdy</a><br />
+                         Written by: <a href="https://thayergowdy.com " target="_blank">Thayer Gowdy</a><br />
+                         Title Design by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
                     </div>
                 </div>
                 <!--END INTERVIEW -->
