--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -150,12 +150,8 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/wakiki-title.png" alt="" style="width:410px;"></div>
-                        <h3>Photography by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
-                         Written by: <a href="http://www.emilynathan.com/" target="_blank">Emily Nathan</a><br />
-                         Illustrations by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
-                         Model: <a href="https://www.instagram.com/belledemo/" target="_blank">Sonia</a></br />
-                         Wardrobe: <a href="https://heidimerrick.com/" target="_blank">Heidi Merrick</a></br />
-                         Cameo: <a href="http://scoutsixteen.com/" target="_blank">Justin Livingston</a></h3>
+                        <h3>Photography by: <a href="http://www.daejafallas.com" target="_blank">Daeja Fallas</a><br />
+                         Title Design by: <a href="http://www.lizzievaughan.com" target="_blank">Lizzie Vaughan</a></h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -409,9 +405,9 @@
 
                         <h4>Credits</h4>
                         <h5>Clothing</h5>
-                        <p>Salvage Public<br/>
-                        Olive and Olive<br/>
-                        Meleana</p>
+                        <p><a href="http://www.salvagepublic.com/" target="_blank">Salvage Public</a><br/>
+                        <a href="http://www.oliveandoliverhawaii.com/" target="_blank">Olive and Olive</a><br/>
+                        <a href="http://meleana.com/" target="_blank">Meleana</a></p>
 
                         <h5>Models</h5>
                         <p>Kaili and Isaac Moore</p>
