--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -152,7 +152,7 @@
                         <div class="title-ill"><img src="images/ningbo-title.png" alt="" style="width:410px;"></div>
                         <h3>Photography by: <a href="https://thayergowdy.com " target="_blank">Thayer Gowdy</a><br />
                          Written by: <a href="https://thayergowdy.com " target="_blank">Thayer Gowdy</a><br />
-                         Title Design by: <a href="http://jimmezei.com" target="_blank">Jim Mezei</a><br />
+                         Title Design by: <a href="http://www.hannahpmode.com" target="_blank">Hannah Perrine Mode</a><br />
                     </div>
                 </div>
                 <!--END INTERVIEW -->
