ningbo Title update

--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -343,7 +343,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2 class="with-ill-small">Food</h2>
+                        <h2 class="with-ill-small">People</h2>
                         <p>The moments that remain with me from Ningbo were often from encounters with the people there. At a base of the Laughing Buddha Temple I had my palm read by an old man, who also sold tiny plastic buddhas. I have a pretty vague idea of what he said, but the gist was that I needed to listen better, and that I would find my other half in Lunar May, and perhaps I shouldn’t eat so many dumplings. At Moon Lake, I watched elders practicing Tai Chi and families renting swan-shaped boat to relax, delicate notes of someone playing the flute drifting by. A lovely lady joined me spontaneously to watch birds on the shore. And at the Chinese opera at Park Hyatt Ningbo, I experienced my most stunning moment - in the lobby, as we were checking in, a beautiful Chinese ‘Kunqu’ opera performer, singing in a signature high pitched birdlike voice, wandered the halls past us all of a sudden.  I trailed behind to find a her standing outside by the pools overlooking a mirror smooth pastel Dongqian Lake, a living film. The sun was a great ball of orange hovering on the edge of the mountains. An unexpectedly perfect ending to an unexpected trip.
                         </p>
                     </div>
