--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -307,7 +307,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2 class="with-ill-small">Food</h2>
+                        <h2 class="with-ill">Food</h2>
                         <p>Ningbo is known for its seafood. The catch? I am one of those people that doesn’t eat anything from the sea, so the challenge was clear. Eating dumplings three meals a day turned out to be divine, however, and was one of the elements that made me fall in love with China. But there’s so much more to local cuisine; at Grandma’s Home, we ate delicious pumpkin soup and spicy chicken with noodles, as well as many other traditional dishes. The dumplings, especially the sweet variety, stuck with me forever.</p>
                     </div>
                 </div>
@@ -343,7 +343,7 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2 class="with-ill-small">People</h2>
+                        <h2 class="with-ill">People</h2>
                         <p>The moments that remain with me from Ningbo were often from encounters with the people there. At a base of the Laughing Buddha Temple I had my palm read by an old man, who also sold tiny plastic buddhas. I have a pretty vague idea of what he said, but the gist was that I needed to listen better, and that I would find my other half in Lunar May, and perhaps I shouldn’t eat so many dumplings. At Moon Lake, I watched elders practicing Tai Chi and families renting swan-shaped boat to relax, delicate notes of someone playing the flute drifting by. A lovely lady joined me spontaneously to watch birds on the shore. And at the Chinese opera at Park Hyatt Ningbo, I experienced my most stunning moment - in the lobby, as we were checking in, a beautiful Chinese ‘Kunqu’ opera performer, singing in a signature high pitched birdlike voice, wandered the halls past us all of a sudden.  I trailed behind to find a her standing outside by the pools overlooking a mirror smooth pastel Dongqian Lake, a living film. The sun was a great ball of orange hovering on the edge of the mountains. An unexpectedly perfect ending to an unexpected trip.
                         </p>
                     </div>
@@ -449,22 +449,6 @@
             </picture>
             <!-- IMAGE END -->
 
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <img src="images/macao4_small.jpg" alt="">
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -554,7 +538,7 @@
                                 <!-- INTERVIW -->
                                 <div id="pg-interview">
 
-                                    <h2 class="with-ill-small">Resources</h2>
+                                    <h2 class="with-ill">Resources</h2>
 
                                     <h4>Eat:</h4>
 
