--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -358,7 +358,7 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
 
-                        <h2 class="with-ill-small">Resources</h2>
+                        <h2 class="with-ill">Resources</h2>
 
                         <h4>Eat:</h4>
 
