--- a/new-site/index.html
+++ b/new-site/index.html
@@ -134,7 +134,7 @@
                     <a href="ningbo/index.html">
                         <img src="images/ningbo-feature.jpg" alt="" class="preview" />
                         <div class="info">
-                            <img src="images/ningbo-title.png" alt="" class="title title-wide" />
+                            <img src="images/ningbo-title.png" alt="" class="title" />
                             <p class="text">Nestled between the mountains and the ocean, Ningbo reveals an inviting China,  steeped in tradition and abundant with dumplings.</p>
                             <div class="meta">travel log<span>5.26.2017</span></div>
                         </div>
