--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -363,10 +363,10 @@
                         <h4>Eat:</h4>
 
                         <h5><a href="http://mahinaandsuns.com/" target="_blank">Mahina & Sun's</a></h5>
-                        <p>Chef Ed Kenney is behind some of Hawaii’s most exciting eateries. This is his fourth establishment, serving rich ricotta toast for breakfast and fresh roasted fish for dinner.</p>
+                        <p>Chef Ed Kenney is behind some of Hawaii’s most exciting eateries. This is his fourth establishment, based on local farm to table ingredients and featuring a rotating, seasonal menu.</p>
 
                         <h5><a href="https://www.facebook.com/ARVO-631655123638880/" target="_blank">ARVO</a></h5>
-                        <p>A small Australian cafe next to a plant shop, ARVO is a bright, friendly and photogenic breakfast favorite, and the coffee is second to none.</p>
+                        <p>A small cafe owned by a half-Australian couple, sharing a space with a plant shop and a surf shop. It’s a bright, friendly and photogenic breakfast favorite, and the coffee is second to none.</p>
 
                         <h5><a href="http://www.mudhenwater.com/" target="_blank">Mud Hen Water</a></h5>
                         <p>Another popular restaurant by Ed Kenney, where traditional Hawaiian fare meets creative plating and modern flourishes.</p>
@@ -381,21 +381,18 @@
                         <h4>Stay:</h4>
 
                         <h5><a href="http://surfjack.com" target="_blank">Surfjack Hotel & Swim Club</a></h5>
-                        <p>One of Waikiki’s best boutique hotels, the easy going Surfjack successfully combines colorful throw pillows, artisanal wooden touches and lots of sunlight.</p>
+                        <p>One of Waikiki’s best boutique hotels, the easy going Surfjack is a successful homage to retro surf culture, with midcentury inspired touches and lots of sunlight.</p>
 
                         <h5><a href="http://www.themodernhonolulu.com/" target="_blank">The Modern</a></h5>
                         <p>Yes, it’s a resort, but The Modern truly stands out thanks to its clean design, beach views and elevated amenities, like the secluded ‘sunset pool’.</p>
 
                         <h4>Do:</h4>
 
-                        <h5>Take a surf lesson at Queens Beach</h5>
+                        <h5>Take a surf lesson at Queen's Beach</h5>
                         <p>Even beginners walk away from the beach feeling excited about surfing. There are plenty of opportunities along the coastline.</p>
 
                         <h5><a href="https://honolulumuseum.org/11981-spalding_house" target="_blank">Visit the Spalding House</a></h5>
                         <p>One of Honolulu Museum of Art’s two locations, the house is a mix of galleries, café, pop-up gift shop, and sculpture gardens. When there, don’t miss the permanent installation of David Hockney's L'Enfant et les sortilèges.</p>
-
-                        <h5><a href="http://www.honolulubiennial.org" target="_blank">Visit the Honolulu Biennial</a></h5>
-                        <p>Taking place March 8th-May 8th, the Biennial is a great opportunity to explore on the local art scene, as well as featured work by guests from Australia, Japan and beyond.</p>
 
                         <h5><a href="http://www.islandviewhawaii.com/" target="_blank">Swim with sharks with Island View Hawaii</a></h5>
                         <p>Dolphins, whales and Galapagos sharks are all frequent sites on this company’s diving tours. Cultural coastal tours for the less adventurous are also available.</p>
