--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -137,11 +137,11 @@
                 <source srcset="images/01_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/01_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-box-intro">
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-lower pg-box-intro">
 
                 <!-- CAPTION -->
                 <!-- LEFT CAPTION -->
@@ -176,7 +176,7 @@
                 <source srcset="images/02_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/02_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/02_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -213,7 +213,7 @@
                 <source srcset="images/03_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/03_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/03_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -234,7 +234,7 @@
                 <source srcset="images/04_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/04_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -252,9 +252,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/05_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/05_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/05_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -273,9 +272,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/06_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/06_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/06_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -295,7 +293,7 @@
                 <source srcset="images/07_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/07_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/07_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -331,7 +329,7 @@
                 <source srcset="images/08_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/08_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/08_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -367,7 +365,7 @@
                 <source srcset="images/09_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/09_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -384,9 +382,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/10_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/10_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/10_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -403,9 +400,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/11_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/11_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/11_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/11_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -424,7 +420,7 @@
                 <source srcset="images/12_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/12_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/12_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -445,7 +441,7 @@
                 <source srcset="images/13_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/13_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/13_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -463,9 +459,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/14_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/14_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/14_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -483,9 +478,8 @@
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
                 <source srcset="images/15_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/15_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
-                <source srcset="images/15_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/15_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/15_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -504,7 +498,7 @@
                 <source srcset="images/16_tiny_atlas_thayer_gowdy_ningbo-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/16_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/16_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/16_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
@@ -524,7 +518,7 @@
                 <source srcset="images/17_tiny_atlas_thayer_gowdy_ningbo-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/17_tiny_atlas_thayer_gowdy_ningbo-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/17_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/17_tiny_atlas_thayer_gowdy_ningbo-S.jpg" alt="Tiny Atlas Quarterly, Ningbo, Thayer Gowdy">
             </picture>
             <!-- IMAGE END -->
 
