--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -137,7 +137,7 @@
                 <source srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -174,7 +174,7 @@
                 <source srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -193,7 +193,7 @@
                 <source srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -212,7 +212,7 @@
                 <source srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -231,7 +231,7 @@
                 <source srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -251,7 +251,7 @@
                 <source srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -271,7 +271,7 @@
                 <source srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -290,7 +290,7 @@
                 <source srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -307,7 +307,7 @@
                 <source srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -325,7 +325,7 @@
                 <source srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -344,7 +344,7 @@
                 <source srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Macao, Emily Nathan">
+                <img srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
