--- a/new-site/ningbo/index.html
+++ b/new-site/ningbo/index.html
@@ -141,7 +141,7 @@
             </picture>
             <!-- IMAGE END -->
 
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-lower pg-box-intro">
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-box-intro">
 
                 <!-- CAPTION -->
                 <!-- LEFT CAPTION -->
