added london folder

--- a/new-site/wakiki/index.html
+++ b/new-site/wakiki/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tiny Atlas Quarterly | Wakiki</title>
+    <title>Tiny Atlas Quarterly | Waikiki</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -137,7 +137,7 @@
                 <source srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/01_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -174,7 +174,7 @@
                 <source srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/02_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -193,7 +193,7 @@
                 <source srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/03_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -212,7 +212,7 @@
                 <source srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/04_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -231,7 +231,7 @@
                 <source srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/05_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -251,7 +251,7 @@
                 <source srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/06_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -271,7 +271,7 @@
                 <source srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/07_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -290,7 +290,7 @@
                 <source srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/08_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -307,7 +307,7 @@
                 <source srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/09_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -325,7 +325,7 @@
                 <source srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/10_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -344,7 +344,7 @@
                 <source srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Wakiki, Daeja Fallas">
+                <img srcset="images/11_Waikiki_Honolulu_Daeja_Fallas_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Waikiki, Daeja Fallas">
             </picture>
             <!-- IMAGE END -->
 
@@ -404,7 +404,6 @@
                         <h5>Clothing</h5>
                         <p><a href="http://www.salvagepublic.com/" target="_blank">Salvage Public</a><br/>
                         <a href="http://www.oliveandoliverhawaii.com/" target="_blank">Olive and Olive</a><br/>
-                        <a href="http://meleana.com/" target="_blank">Meleana</a></p>
 
                         <h5>Models</h5>
                         <p>Kaili and Isaac Moore</p>
@@ -439,7 +438,7 @@
                 <a href="../index.html"><img src="../images/back-arrow.svg" alt="" class="back-arrow"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                 <div class="title">
                     <span class="issue">City 2O17</span><br>
-                    <span class="feature">Wakiki</span>
+                    <span class="feature">Waikiki</span>
                 </div>
                 <div class="feature-links">
                     <span id="pageLink"><a href="#page11">Trip Resources</a></span>
